<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlTopBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/cart"
            android:textColor="@color/appColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tvOrderDetails"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintTop_toBottomOf="@+id/rlTopBar" />

    <TextView
        android:id="@+id/tvOrderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingStart="25dp"
        android:drawablePadding="8dp"
        android:paddingEnd="25dp"
        android:drawableEnd="@drawable/ic_baseline_info_24"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/order_details"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCartItems" />

    <TextView
        android:id="@+id/tvSubtotal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/subtotal_s"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrderDetails" />

    <TextView
        android:id="@+id/tvTaxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/taxes_and_charges_s"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtotal" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/total_s"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textSize="@dimen/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTaxes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/check_out"
        android:textAllCaps="false"
        android:paddingStart="25dp"
        android:layout_marginEnd="25dp"
        android:textColor="@color/white"
        android:textSize="@dimen/btnTextSize"
        app:backgroundTint="@color/appColor"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTotal" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gpCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnCheckout,tvOrderDetails,tvSubtotal,tvSubtotal,tvTaxes,tvTotal,rvCartItems" />

    <include
        android:id="@+id/ivEmpty"
        layout="@layout/item_empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>