<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.ui.SneakerDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="2dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvTopView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvMain">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/photos_viewpager"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/tab_layout"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPrevious"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_arrow_back_white_new_24"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabMaxWidth="0dp"
            app:tabMinWidth="70dp"
            android:orientation="horizontal"
            app:tabIndicatorHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNext"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_navigate_next_24"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="25dp"
        android:layout_margin="5dp"
        android:clipToPadding="false"
        app:contentPadding="15dp"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintBottom_toBottomOf="parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Nike"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_baseline_info_24"
                android:textColor="@color/black"
                android:textSize="@dimen/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_uk"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/subTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesc" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/rvSize"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:tabBackground="@drawable/size_tab_selector"
                app:tabGravity="center"
                app:tabMaxWidth="0dp"
                app:tabMinWidth="70dp"
                app:tabTextColor="@color/appColor"
               app:tabSelectedTextColor="@color/white"
                app:tabIndicatorHeight="0dp"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/tvSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvSize"
                app:layout_constraintTop_toTopOf="@id/tvSize"
                />


            <TextView
                android:id="@+id/tvColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/subTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSize" />
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/rvColor"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:tabBackground="@drawable/color_tab_selector"
                app:tabGravity="center"
                app:tabMaxWidth="0dp"
                app:tabPadding="15dp"
                app:tabMinWidth="70dp"
                app:tabTextColor="@color/appColor"
                app:tabSelectedTextColor="@color/white"
                app:tabIndicatorHeight="0dp"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/tvColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvColor"
                app:layout_constraintTop_toTopOf="@id/tvColor"
                />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_"
                android:textSize="@dimen/subTitle"
                app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnAddToCart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appColor"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="14dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginTop="18dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>